В управлении убраны конфликты. Вероятность выбить сердце снижена в 10 раз

--- a/clients/ImmersiveForest/config/config/scalinghealth/main.cfg
+++ b/clients/ImmersiveForest/config/config/scalinghealth/main.cfg
@@ -14,7 +14,7 @@ main {
         #   DISTANCE_FROM_ORIGIN - Based on the mob's distance from the origin.
         #   DISTANCE_AND_TIME - Mix of DISTANCE_FROM_SPAWN and WEIGHTED_AVERAGE.
         #   SERVER_WIDE - Difficulty is tracked at a server level, individual player difficulty has no impact. [default: WEIGHTED_AVERAGE]
-        S:"Area Mode"=WEIGHTED_AVERAGE
+        S:"Area Mode"=MAX_LEVEL
 
         # Change in difficulty when a player sleeps through the night. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
         S:"Difficulty Added When Sleeping"=0.0
@@ -70,7 +70,7 @@ main {
         S:"Max Value"=250.0
 
         # The minimum difficulty value. This can be different from the starting value. [range: 0.0 ~ 3.4028234663852886E38, default: 0.0]
-        S:"Min Value"=0.0
+        S:"Min Value"=10
 
         # Allows players' difficulty to be reset at certain frequencies.
         #   NONE - Do not do regular resets.  Weekdays (SUNDAY, MONDAY, etc.) - Reset on this day of the week. If the player does not play on this day, they will be reset the next time they log in.
@@ -228,11 +228,11 @@ main {
         B:"Healing Items Fire Healing Event"=true
 
         # The chance of a hostile mob dropping a heart container when killed. [range: 0.0 ~ 1.0, default: 0.009999999776482582]
-        S:"Heart Drop Chance"=0.009999999776482582
+        S:"Heart Drop Chance"=0.001
 
         # The chance of a passive mob (animals) dropping a heart container when killed. [range: 0.0 ~ 1.0, default: 0.0010000000474974513]
-        S:"Heart Drop Chance (Passive)"=0.0010000000474974513
-
+        S:"Heart Drop Chance (Passive)"=0.0001
+		
         # If true, the healing from heart containers will fire a standard healing event, allowing other mods to execute additional code or cancel the healing altogether. Disable if needed.
         B:"Heart Healing Event"=true
 
@@ -243,13 +243,13 @@ main {
         I:"Hearts Dropped by Blight Max"=2
 
         # The minimum number of heart containers that a blight will drop when killed. [range: 0 ~ 64, default: 0]
-        I:"Hearts Dropped by Blight Min"=0
+        I:"Hearts Dropped by Blight Min"=2
 
         # The maximum number of heart containers that a boss will drop when killed. [range: 0 ~ 64, default: 6]
-        I:"Hearts Dropped by Boss Max"=6
+        I:"Hearts Dropped by Boss Max"=1
 
         # The minimum number of heart containers that a boss will drop when killed. [range: 0 ~ 64, default: 3]
-        I:"Hearts Dropped by Boss Min"=3
+        I:"Hearts Dropped by Boss Min"=1
 
         # The amount of extra health restored when using a heart container. This applies whether or not hearts increase max health. [range: 0 ~ 2147483647, default: 4]
         I:"Hearts Health Restored"=4
