--- a/clients/ImmersiveForest/config/config/scalinghealth/main.cfg
+++ b/clients/ImmersiveForest/config/config/scalinghealth/main.cfg
@@ -24,23 +24,23 @@ main {
          >
 
         # Difficulty change per blight kill. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Difficulty Per Blight Kill"=0.0
+        S:"Difficulty Per Blight Kill"=0.01
 
         # The amount of difficulty added per unit distance from the origin/spawn, assuming "Area Mode" is set to a distance-based option. Negative numbers will decrease difficulty over distance. [range: -3.4028234663852886E38 ~ 3.4028234663852886E38, default: 0.0024999999441206455]
         S:"Difficulty Per Block"=0.0024999999441206455
 
         # Difficulty change per boss kill. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Difficulty Per Boss Kill"=0.0
+        S:"Difficulty Per Boss Kill"=1.0
 
         # Difficulty change per hostile mob killed. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Difficulty Per Kill"=0.0
+        S:"Difficulty Per Kill"=0.001
 
         # Lets you set difficulty changes for individual mobs. Each line has 3 values separated by spaces: entity ID, standard kill change, blight kill change. For example, entering "minecraft:zombie 0.1 -20" will cause zombie kills to add 0.1 difficulty, but killing a blight zombie will remove 20 difficulty instead. [default: ]
         S:"Difficulty Per Kill By Mob" <
          >
 
         # Difficulty change per passive mob kill. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Difficulty Per Passive Kill"=0.0
+        S:"Difficulty Per Passive Kill"=0.01
 
         # Apply a simple change to the area difficulty in a given dimension. Use the dimension ID, then a space, then an operator (+-*/) followed by a number. For example, "-1 *2.0" would make difficulty 2x higher in the Nether. "1 +20" would increase difficulty by 20 in The End [default: ]
         S:"Dimension Value Factor" <
@@ -64,13 +64,13 @@ main {
         S:"Increase Per Second"=0.0011573999654501677
 
         # The difficulty a player loses on death. Negative numbers cause the player to gain difficulty. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Lost On Death"=0.0
+        S:"Lost On Death"=250.0
 
         # The maximum difficulty level that can be reached. [range: 0.0 ~ 3.4028234663852886E38, default: 250.0]
         S:"Max Value"=250.0
 
         # The minimum difficulty value. This can be different from the starting value. [range: 0.0 ~ 3.4028234663852886E38, default: 0.0]
-        S:"Min Value"=10
+        S:"Min Value"=0
 
         # Allows players' difficulty to be reset at certain frequencies.
         #   NONE - Do not do regular resets.  Weekdays (SUNDAY, MONDAY, etc.) - Reset on this day of the week. If the player does not play on this day, they will be reset the next time they log in.
@@ -187,7 +187,7 @@ main {
         B:"Render Difficulty Meter"=true
 
         # Render the difficulty meter at all times. If false, it displays occasionally.
-        B:"Render Difficulty Meter Always"=false
+        B:"Render Difficulty Meter Always"=true
 
         # If true, replaces the vanilla hearts with Scaling Health's hearts. Otherwise, regular vanilla hearts are rendered first, then custom hearts are used for extra health.
         B:"Replace Vanilla Heart Row With Custom"=true
@@ -240,10 +240,10 @@ main {
         I:"Heart XP Level Cost"=10
 
         # The maximum number of heart containers that a blight will drop when killed. [range: 0 ~ 64, default: 2]
-        I:"Hearts Dropped by Blight Max"=2
+        I:"Hearts Dropped by Blight Max"=1
 
         # The minimum number of heart containers that a blight will drop when killed. [range: 0 ~ 64, default: 0]
-        I:"Hearts Dropped by Blight Min"=2
+        I:"Hearts Dropped by Blight Min"=0
 
         # The maximum number of heart containers that a boss will drop when killed. [range: 0 ~ 64, default: 6]
         I:"Hearts Dropped by Boss Max"=1
