--- a/clients/ImmersiveForest/config/config/scalinghealth/main.cfg
+++ b/clients/ImmersiveForest/config/config/scalinghealth/main.cfg
@@ -27,20 +27,20 @@ main {
         S:"Difficulty Per Blight Kill"=0.01
 
         # The amount of difficulty added per unit distance from the origin/spawn, assuming "Area Mode" is set to a distance-based option. Negative numbers will decrease difficulty over distance. [range: -3.4028234663852886E38 ~ 3.4028234663852886E38, default: 0.0024999999441206455]
-        S:"Difficulty Per Block"=0.0024999999441206455
+        S:"Difficulty Per Block"=0.0
 
         # Difficulty change per boss kill. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
         S:"Difficulty Per Boss Kill"=1.0
 
         # Difficulty change per hostile mob killed. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Difficulty Per Kill"=0.001
+        S:"Difficulty Per Kill"=0.01
 
         # Lets you set difficulty changes for individual mobs. Each line has 3 values separated by spaces: entity ID, standard kill change, blight kill change. For example, entering "minecraft:zombie 0.1 -20" will cause zombie kills to add 0.1 difficulty, but killing a blight zombie will remove 20 difficulty instead. [default: ]
         S:"Difficulty Per Kill By Mob" <
          >
 
         # Difficulty change per passive mob kill. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Difficulty Per Passive Kill"=0.01
+        S:"Difficulty Per Passive Kill"=0.001
 
         # Apply a simple change to the area difficulty in a given dimension. Use the dimension ID, then a space, then an operator (+-*/) followed by a number. For example, "-1 *2.0" would make difficulty 2x higher in the Nether. "1 +20" would increase difficulty by 20 in The End [default: ]
         S:"Dimension Value Factor" <
@@ -61,7 +61,7 @@ main {
         S:"Idle Multiplier"=0.699999988079071
 
         # The amount difficulty changes each second. In Difficult Life, the option was named per tick, but was actually applied each second. Negative numbers will decrease difficulty over time. [range: -10000.0 ~ 10000.0, default: 0.0011573999654501677]
-        S:"Increase Per Second"=0.0011573999654501677
+        S:"Increase Per Second"=0.0001
 
         # The difficulty a player loses on death. Negative numbers cause the player to gain difficulty. [range: -10000.0 ~ 10000.0, default: 0.0]
         S:"Lost On Death"=250.0
