Убран мод на воронки. Баланс: сложность растет с убийством мобов, падает при смерти

--- a/clients/ImmersiveForest/config/config/scalinghealth/main.cfg
+++ b/clients/ImmersiveForest/config/config/scalinghealth/main.cfg
@@ -17,7 +17,7 @@ main {
         S:"Area Mode"=MAX_LEVEL
 
         # Change in difficulty when a player sleeps through the night. Negative numbers cause difficulty to decrease. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Difficulty Added When Sleeping"=0.0
+        S:"Difficulty Added When Sleeping"=1.0
 
         # Allows difficulty multipliers to be set for specific dimensions. Use the dimension ID and the multiplier you want, separated by a space. For example, "-1 1.5" would make difficulty increase 1.5x faster in the Nether. [default: ]
         S:"Difficulty Dimension Multiplier" <
@@ -58,13 +58,13 @@ main {
         S:"Group Area Bonus"=0.05000000074505806
 
         # Difficulty added per second is multiplied by this if the player is not moving. [range: -100.0 ~ 100.0, default: 0.699999988079071]
-        S:"Idle Multiplier"=0.699999988079071
+        S:"Idle Multiplier"=0.0
 
         # The amount difficulty changes each second. In Difficult Life, the option was named per tick, but was actually applied each second. Negative numbers will decrease difficulty over time. [range: -10000.0 ~ 10000.0, default: 0.0011573999654501677]
-        S:"Increase Per Second"=0.0001
+        S:"Increase Per Second"=0.0
 
         # The difficulty a player loses on death. Negative numbers cause the player to gain difficulty. [range: -10000.0 ~ 10000.0, default: 0.0]
-        S:"Lost On Death"=250.0
+        S:"Lost On Death"=10.0
 
         # The maximum difficulty level that can be reached. [range: 0.0 ~ 3.4028234663852886E38, default: 250.0]
         S:"Max Value"=250.0
