Максимальная сложность 100. Увеличен урон некоторых пуль револьвера и рельсомёта

--- a/clients/ImmersiveForest/config/config/immersiveengineering.cfg
+++ b/clients/ImmersiveForest/config/config/immersiveengineering.cfg
@@ -160,6 +160,7 @@ general {
         B:theoneprobe=true
         B:thermalfoundation=true
         B:waila=true
+        B:xlfoodmod=true
     }
 
     machines {
@@ -525,7 +526,7 @@ general {
         # Generation config for Bauxite Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_bauxite <
-            0
+            4
             40
             85
             8
@@ -535,7 +536,7 @@ general {
         # Generation config for Copper Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_copper <
-            0
+            8
             40
             72
             8
@@ -545,7 +546,7 @@ general {
         # Generation config for Lead Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_lead <
-            0
+            6
             8
             36
             4
@@ -555,7 +556,7 @@ general {
         # Generation config for Nickel Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_nickel <
-            0
+            6
             8
             24
             2
@@ -565,7 +566,7 @@ general {
         # Generation config for Silver Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_silver <
-            0
+            8
             8
             40
             4
@@ -575,7 +576,7 @@ general {
         # Generation config for Uranium Ore.
         # Parameters: Vein size, lowest possible Y, highest possible Y, veins per chunk, chance for vein to spawn (out of 100). Set vein size to 0 to disable the generation
         I:ore_uranium <
-            0
+            4
             8
             24
             2
@@ -615,12 +616,12 @@ general {
         # The amount of base damage an ArmorPiercing Cartridge inflicts
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_AP=10.0
+        D:bulletDamage_AP=15.0
 
         # The amount of base damage a single part of Buckshot inflicts
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_Buck=2.0
+        D:bulletDamage_Buck=3.0
 
         # The amount of base damage a Casull Cartridge inflicts
         # Min: 0.0
@@ -630,7 +631,7 @@ general {
         # The amount of base damage a DragonsBreath Cartridge inflicts
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_Dragon=3.0
+        D:bulletDamage_Dragon=6.0
 
         # The amount of base damage a Homing Cartridge inflicts
         # Min: 0.0
@@ -645,7 +646,7 @@ general {
         # The amount of damage a silver bullet inflicts
         # Min: 0.0
         # Max: 1.7976931348623157E308
-        D:bulletDamage_Silver=10.0
+        D:bulletDamage_Silver=12.0
 
         # The amount of base damage a Wolfpack Cartridge inflicts
         # Min: 0.0
@@ -705,7 +706,7 @@ general {
         # A modifier for the damage of all projectiles fired by the Railgun
         # Min: 0.001
         # Max: 1.7976931348623157E308
-        D:railgun_damage=1.0
+        D:railgun_damage=2.0
 
         # A whitelist of foods allowed in the toolbox, formatting: [mod id]:[item name]
         S:toolbox_foods <
