badrockores: размер месторождения 10-->5

--- a/clients/ImmersiveForest/config/config/bedrockores.cfg
+++ b/clients/ImmersiveForest/config/config/bedrockores.cfg
@@ -84,7 +84,8 @@ general {
     # A constant scaling factor applied to all yields. Intended to allow easily changing yields in general, while not messing with the balancing of ores against each other.
     # Min: 0.0
     # Max: 10000.0
-    D:veinYieldConstScale=10.0
+	# def: 2.0
+    D:veinYieldConstScale=5.0
 
     # The 'weight' of the world generator placing bedrock ores. This is used when Forge sorts generators to know in what order they run. Higher weights run later.
     I:worldGeneratorWeight=10
