--- a/servers/Vannihilation/config-server/server.properties
+++ b/servers/Vannihilation/config-server/server.properties
@@ -27,7 +27,7 @@ max-tick-time=60000
 max-world-size=50000
 motd=Craftorio.com Server\!
 network-compression-threshold=256
-online-mode=true
+online-mode=false
 op-permission-level=4
 player-idle-timeout=1800
 prevent-proxy-connections=false
