--- a/servers/Vannihilation/config-server/server.properties
+++ b/servers/Vannihilation/config-server/server.properties
@@ -4,7 +4,7 @@ allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=2
+difficulty=normal
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=true
@@ -20,7 +20,7 @@ generator-settings=
 hardcore=false
 level-name=world
 level-seed=
-level-type=BIOMESOP
+level-type=biomesop
 max-build-height=256
 max-players=20
 max-tick-time=60000
