remove scaling health

--- a/clients/Vannihilation/config/config/survive.common.toml
+++ b/clients/Vannihilation/config/config/survive.common.toml
@@ -6,7 +6,7 @@
 	#-------------------------------------------
 	#Default: true
 	#-------------------------------------------
-	"Boolean: Enable Temperature" = true
+	"Boolean: Enable Temperature" = false
 	#
 	############################################
 	#Disabling this will prevent players from sleeping if they have hyperthermia or hypothermia
