--- a/servers/Vannihilation/config-server/server.properties
+++ b/servers/Vannihilation/config-server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Apr 12 21:59:30 UTC 2021
+#Mon Apr 12 22:45:03 UTC 2021
 allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
@@ -20,7 +20,7 @@ generator-settings=
 hardcore=false
 level-name=world
 level-seed=
-level-type=biomesop
+level-type=biomesoplenty
 max-build-height=256
 max-players=20
 max-tick-time=60000
