--- a/servers/Vannihilation/config-server/server.properties
+++ b/servers/Vannihilation/config-server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Apr 12 22:45:03 UTC 2021
+#Sat Aug 21 22:11:44 UTC 2021
 allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
@@ -27,7 +27,7 @@ max-tick-time=60000
 max-world-size=50000
 motd=Craftorio.com Server\!
 network-compression-threshold=256
-online-mode=false
+online-mode=true
 op-permission-level=4
 player-idle-timeout=1800
 prevent-proxy-connections=false
