--- a/clients/Vannihilation/extra/ultra-core-agent-client.conf
+++ b/clients/Vannihilation/extra/ultra-core-agent-client.conf
@@ -1,8 +1,12 @@
 #Client auth
+https://sessionserver.mojang.com/session/minecraft/join
 https://sessionserver.craftorio.com/session/minecraft/join
 #Client profile (skins)
+r|https:\/\/sessionserver\.mojang\.com\/session\/minecraft\/profile\/([0-9a-f]+).*
 r|https:\/\/sessionserver\.craftorio\.com\/session\/minecraft\/profile\/([0-9a-f]+).*
 #Client api (heads)
+r|https:\/\/api\.mojang\.com\/profiles\/minecraft\/?(.*)?
 r|https:\/\/api\.craftorio\.com\/profiles\/minecraft\/?(.*)?
 #Client skin (skin textures)
+r|http:\/\/textures\.minecraft\.net\/texture\/(.*)
 r|http:\/\/textures\.craftorio\.com\/texture\/(.*)
