--- a/clients/Vannihilation/extra/ultra-core-agent-server.conf
+++ b/clients/Vannihilation/extra/ultra-core-agent-server.conf
@@ -1,3 +1,3 @@
-#Client auth
-https://sessionserver.mojang.com/session/minecraft/join
-https://sessionserver.craftorio.com/session/minecraft/join
+# check session
+r|https:\/\/sessionserver\.mojang\.com\/session\/minecraft\/hasJoined\?(.*)
+f|https://sessionserver.craftorio.com/session/minecraft/hasJoined?%s
