--- a/clients/Apholon/config/config/RandomTP/config.yml
+++ b/clients/Apholon/config/config/RandomTP/config.yml
@@ -3,14 +3,14 @@ distance:
   default_world: playerworld
   # Max distance that you want to a person be teleported. (0 = world border size / 2) [default: auto]
   # Range: > 0
-  max_distance: 32
+  max_distance: 8
   # Minimum distance that you want to a person be teleported. [default: 1]
   # Range: > 1
   min_distance: 1
 
 inter-dimensions-command:
   # Do you want to the command /rtpd be allowed? (This commands adds a inter-dimension RTP) [default: true]
-  inter-dim: true
+  inter-dim: false
   # Do you want to use the whitelist or blacklist dimension?  [default: false]
   use-whitelist: false
   # The dimensions whitelist (Works with namespaces:paths only, use-whitelist:true=whitelist use-whitelist:true=blacklist)
