--- a/clients/Mododolon/config/config/cc-common.toml
+++ b/clients/Mododolon/config/config/cc-common.toml
@@ -9,6 +9,6 @@ ChunksFromSpawn = 10
 #Range: 0 ~ 250
 ClaimLimit = 36
 #Blocks that bypass claims on right click
-BypassBlocks = ["minecraft:ender_chest", "waystones:sandy_waystone", "waystones:waystone", "waystones:mossy_waystone", "gravestore:gravestone"]
+BypassBlocks = ["minecraft:ender_chest", "waystones:sandy_waystone", "waystones:waystone", "waystones:mossy_waystone"]
 
 
