--- a/servers/Mododolon/config-server/server.properties
+++ b/servers/Mododolon/config-server/server.properties
@@ -19,10 +19,10 @@ generate-structures=true
 generator-settings=
 hardcore=false
 level-name=world
-level-seed=1472807559
+level-seed=
 level-type=biomesoplenty
 max-build-height=256
-max-players=20
+max-players=24
 max-tick-time=120000
 max-world-size=50000
 motd=Craftorio.com Server\!
