--- a/clients/Mododolon/config/config/biomesoplenty/generation.toml
+++ b/clients/Mododolon/config/config/biomesoplenty/generation.toml
@@ -2,10 +2,10 @@
 [overworld]
 	#The size of generated biomes.
 	#Allowed Values: TINY, SMALL, MEDIUM, LARGE, HUGE
-	biome_size = "LARGE"
+	biome_size = "MEDIUM"
 	#The size of generated rivers.
 	#Allowed Values: TINY, SMALL, MEDIUM, LARGE, HUGE
-	river_size = "LARGE"
+	river_size = "MEDIUM"
 	#Type of temperature zones to use during biome placement.
 	#Allowed Values: LATITUDE, SMALL_ZONES, MEDIUM_ZONES, LARGE_ZONES, RANDOM
 	temperature_variation_scheme = "MEDIUM_ZONES"
