cavesandcliffs-common.toml

--- a/servers/Mododolon/config-server/server.properties
+++ b/servers/Mododolon/config-server/server.properties
@@ -19,7 +19,7 @@ generate-structures=true
 generator-settings=
 hardcore=false
 level-name=world
-level-seed=
+level-seed=-7779012851735210946
 level-type=biomesoplenty
 max-build-height=256
 max-players=24
