--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .env
 servers/*/mods/**.jar
+!servers/*/mods/*spongeforge-*.jar
+!servers/*/mods/plugins/*.jar
 servers/*/config/**
 !servers/*/config/**/exclude.txt
 servers/*/worlds/**
