--- a/servers/IronSky/config-server/server.properties
+++ b/servers/IronSky/config-server/server.properties
@@ -35,7 +35,7 @@ white-list=false
 generate-structures=true
 online-mode=true
 max-build-height=256
-level-seed=8665741220217324566
+level-seed=
 use-native-transport=true
 prevent-proxy-connections=false
 motd=Craft your life with craftorio.com\!
