--- a/servers/IronSky/config-server/server.properties
+++ b/servers/IronSky/config-server/server.properties
@@ -26,7 +26,7 @@ server-port=25565
 debug=false
 server-ip=
 spawn-npcs=true
-allow-flight=false
+allow-flight=true
 level-name=world
 view-distance=6
 resource-pack=
