--- a/clients/IronSky/config/config/jei/itemBlacklist.cfg
+++ b/clients/IronSky/config/config/jei/itemBlacklist.cfg
@@ -14,6 +14,8 @@ advanced {
       projectred-core:resource_item:100
       projectred-core:resource_item:101
       projectred-core:resource_item:102
+      refinedstorage:hollow_cover
+      refinedstorage:cover
      >
 }
 
