--- a/clients/IronSky/config/config/betternether.cfg
+++ b/clients/IronSky/config/config/betternether.cfg
@@ -236,7 +236,7 @@ blocks {
     B:block_potted_plant=true
 
     # Enables|Disables block [default: true]
-    B:block_quartz_glass=false
+    B:block_quartz_glass=true
 
     # Enables|Disables block [default: true]
     B:block_quartz_glass_framed=true
