--- a/clients/IronSky/config/config/improvedmobs/main.cfg
+++ b/clients/IronSky/config/config/improvedmobs/main.cfg
@@ -7,7 +7,8 @@
 ##########################################################################################################
 
 ai {
-    # List for of pairs containing which mobs auto target others. Syntax is [mob id e.g. minecraft:skeleton]-[mob id or class name e.g. EntityZombie] where the class name is the target [default: ]
+    # List for of pairs containing which mobs auto target others. Syntax is [mob id]-[mob id or class name] where second value is the target.
+    #  e.g. minecraft:zombie-minecraft:skeleton makes all zombies target skeletons [default: ]
     S:"Auto Target List" <
      >
 
@@ -24,61 +25,52 @@ ai {
 
     # Treat Block Whitelist as Blocklist [default: false]
     B:"Block as Blacklist"=false
-
-    # Blacklist for mobs who can't ride a boat [default: ]
     S:"Boat Blacklist" <
      >
-
-    # Treat Boat Blacklist as Whitelist [default: false]
     B:"Boat Whitelist"=false
 
-    # Blacklist for mobs, which can never break blocks [default: [minecraft:creeper]]
+    # Should mobs be able to break tile entities? Evaluated before the break list [default: true]
+    B:"Break Tiles"=true
     S:"Breaker Blacklist" <
         minecraft:creeper
      >
 
     # Chance for a mob to be able to break blocks. [range: 0.0 ~ 1.0, default: 0.3]
     S:"Breaker Chance"=0.3
-
-    # Use the AI Blacklist as Whitelist [default: false]
     B:"Breaker Whitelist"=false
 
     # Item which will be given to mobs who can break blocks. Set to nothing to not give any items. [default: minecraft:diamond_pickaxe]
     S:"Breaking item"=minecraft:diamond_pickaxe
 
-    # Blacklist for usable items given to mobs. (Not weapons but e.g. tnt) [default: ]
+    # Difficulty at which mobs are able to break blocks[default: 0.0]
+    D:"Difficulty Break AI"=0.0
+
+    # Difficulty at which mobs are able to steal items[default: 0.0]
+    D:"Difficulty Steal AI"=0.0
     S:"Item Blacklist" <
      >
-
-    # Blacklist for mobs which can't use items [default: ]
     S:"Item Mob-Blacklist" <
      >
-
-    # Treat Item Mob-Blacklist as Whitelist [default: false]
     B:"Item Mob-Whitelist"=false
-
-    # Blacklist for entities which can't climb ladder [default: [minecraft:creeper]]
     S:"Ladder Blacklist" <
         minecraft:creeper
      >
-
-    # Treat Ladder Blacklist as Whitelist [default: false]
     B:"Ladder Whitelist"=false
 
     # Chance for neutral mobs to be aggressive [range: 0.0 ~ 1.0, default: 0.2]
     S:"Neutral Aggressive Chance"=0.2
 
+    # Delay for the coroutil repair block. Coroutil integration needs to be enabled.
+    I:"Repair Ticks"=500
+
     # Use the block breaking sound instead of a knocking sound [default: false]
     B:Sound=false
-
-    # Blacklist for mobs who can't steal from inventory [default: ]
     S:"Steal Blacklist" <
      >
-
-    # Treat Steal Blacklist as Whitelist [default: false]
     B:"Steal Whitelist"=true
 
-    # Should mobs target villagers? RIP Villagers [default: true]
+    # Chance for a mob to be able to steal items. [range: 0.0 ~ 1.0, default: 0.5]
+    S:"Stealer Chance"=0.5
     B:"Villager Target"=true
 }
 
@@ -90,11 +82,8 @@ ai {
 ##########################################################################################################
 
 attributes {
-    # Blacklist for mobs which should not have their attributes modified [default: ]
     S:"Attribute Blacklist" <
      >
-
-    # Treat Attribute Blacklist as Whitelist [default: false]
     B:"Attribute Whitelist"=false
 
     # Damage will be multiplied by difficulty*0.008*x. Set to 0 to disable.[default: 1.0]
@@ -130,6 +119,9 @@ attributes {
     # Projectile Damage will be multiplied by 1+difficulty*0.008*x. Set to 0 to disable.[default: 1.0]
     D:"Projectile Damage Increase"=1.0
 
+    # Round health to the nearest x. Set to 0 to disable.[default: 0.5]
+    D:"Round HP"=0.5
+
     # Speed will be increased by difficulty*0.0008*x. Set to 0 to disable.[default: 1.0]
     D:"Speed Increase"=1.0
 }
@@ -156,12 +148,8 @@ debug {
 equipment {
     # Base chance for each additional armor pieces [range: 0.0 ~ 1.0, default: 0.3]
     S:"Additional Equipment Chance"=0.3
-
-    # Blacklist for mobs, which shouldn't get armor equiped [default: ]
     S:"Armor Mob-Blacklist" <
      >
-
-    # Use blacklist as whitelist [default: false]
     B:"Armor Mob-Whitelist"=false
 
     # Adds additional x*difficulty% to base enchanting chance[default: 0.3]
@@ -172,8 +160,6 @@ equipment {
 
     # Adds additional x*difficulty% to base equip chance[default: 0.3]
     D:"Equipment Addition"=0.3
-
-    # Blacklist for mob equipments. Use the modid to add all items from that mod [default: [techguns:nucleardeathray], [techguns:grenadelauncher], [techguns:tfg], [techguns:guidedmissilelauncher], [techguns:rocketlauncher]]
     S:"Equipment Blacklist" <
         techguns:nucleardeathray
         techguns:grenadelauncher
@@ -184,12 +170,20 @@ equipment {
 
     # Base chance that a mob can have one piece of armor [range: 0.0 ~ 1.0, default: 0.1]
     S:"Equipment Chance"=0.1
-
-    # Use blacklist as whitelist [default: false]
     B:"Equipment Whitelist"=false
 
-    # Chance for mobs to have an item. Higher priority than weapons [range: 0.0 ~ 1.0, default: 0.05]
+    # Blacklist for mods. Add modid to prevent items from that mod being used. (For individual items use the equipment.json) [default: ]
+    S:"Item Blacklist" <
+     >
+
+    # Adds additional x*difficulty% to base item chance[default: 0.2]
+    D:"Item Chance add"=0.2
+
+    # Chance for mobs to have an item in offhand. [range: 0.0 ~ 1.0, default: 0.05]
     S:"Item Equip Chance"=0.05
+
+    # Use blacklist as whitelist [default: false]
+    B:"Item Whitelist"=false
 
     # Should mobs drop the armor equipped through this mod? (Other methods e.g. through vanilla is not included) [default: false]
     B:"Should drop equipment"=false
@@ -209,11 +203,17 @@ equipment {
 ##########################################################################################################
 
 general {
+    # Time in ticks for which the difficulty shouldnt increase at the beginning. One full minecraft day is 24000 ticks[min: 0, default: 0]
+    I:"Difficulty Delay"=0
+
     # Disable/Enables the whole difficulty scaling of this mod
     B:"Enable difficulty scaling"=false
 
     # Disable/Enable friendly fire for owned pets. [default: false]
     B:FriendlyFire=false
+
+    # Wether difficulty should only increase with at least one online players or not [default: false]
+    B:"Ignore Players"=false
 
     # Light level, blocks can have at max, so mobs can spawn on them. [range: 0 ~ 15, default: 7]
     I:Light=5
@@ -265,6 +265,9 @@ gui {
     S:"Difficulty color"=DARK_PURPLE
     I:"Gui X"=5
     I:"Gui Y"=5
+
+    # Scaling of the difficulty text [range: 0.0 ~ 5.0, default: 1.0]
+    S:"Text Scale"=1.0
 }
 
 
@@ -275,6 +278,9 @@ gui {
 ##########################################################################################################
 
 integration {
+    # Should the coroutils repair block be used. (Requires coroutils mod)
+    B:"Use CoroUtils Mod"=true
+
     # Should mobs be able to use weapons from the reforged mod. (Requires reforged mod)
     B:"Use Reforged Mod"=true
 
@@ -283,6 +289,107 @@ integration {
 
     # Should mobs be able to use techguns weapons. (Requires techguns mod)
     B:"Use Techguns Mod"=true
+}
+
+
+##########################################################################################################
+# list
+#--------------------------------------------------------------------------------------------------------#
+# Black/Whitelist for various stuff
+##########################################################################################################
+
+list {
+    # Treat ARMOR flags as whitelist [default: false]
+    B:"Armor Equip Whitelist"=false
+
+    # Treat ATTRIBUTES flags as whitelist [default: false]
+    B:"Attribute Whitelist"=false
+
+    # Treat SWIMMRIDE flags as whitelist [default: false]
+    B:"Boat Whitelist"=false
+
+    # Treat BLOCKBREAK flags as whitelist [default: false]
+    B:"Breaker Whitelist"=false
+
+    # Treat HELDITEMS flags as whitelist [default: false]
+    B:"Held Equip Whitelist"=false
+
+    # Treat USEITEM flags as whitelist [default: false]
+    B:"Item Use Whitelist"=false
+
+    # Treat LADDER flags as whitelist [default: false]
+    B:"Ladder Whitelist"=false
+
+    # By default the mod only modifies EntityMobs. Add other entities here if you want to apply modifications to them. Usage: <entity registry name> followed by any of:
+    # [ALL,ATTRIBUTES,ARMOR,HELDITEMS,BLOCKBREAK,USEITEM,LADDER,STEAL,SWIMMRIDE,TARGETVILLAGER,REVERSE].
+    # Leave empty to apply them all and REVERSE to reverse all flags. Some flags do nothing for certain mobs!
+    # example: minecraft:sheep|REVERSE|ATTRIBUTES will add sheep to attributes modification (since default is a blacklist)
+    # or minecraft:sheep|ATTRIBUTES will add sheep to everything except attributes
+    #  [default: [customnpcs:npcorcfemale], [customnpcs:npcslime], [customnpcs:npczombiemale], [minecraft:parrot], [customnpcs:npchumanfemale], [minecraft:horse], [minecraft:polar_bear], [minecraft:bat], [customnpcs:npcpony], [minecraft:pig], [minecraft:llama], [forestry:butterflyge], [customnpcs:npcnagamale], [customnpcs:npcgolem], [minecraft:sheep], [minecraft:ender_dragon], [customnpcs:npcenderman], [biomesoplenty:wasp], [customnpcs:npcdwarfmale], [customnpcs:npcskeleton], [minecraft:snowman], [customnpcs:customnpcclassic], [customnpcs:npcelfmale], [customnpcs:customnpc64x32], [minecraft:villager_golem], [customnpcs:npcelffemale], [minecraft:donkey], [customnpcs:npcenderchibi], [coroutil:bat_smart], [minecraft:squid], [minecraft:skeleton_horse], [minecraft:mule], [customnpcs:npccrystal], [techguns:attackhelicopter], [customnpcs:npcnagafemale], [minecraft:zombie_horse], [minecraft:cow], [customnpcs:npcfurryfemale], [customnpcs:customnpc], [customnpcs:npcdwarffemale], [customnpcs:customnpcalex], [techguns:turret], [customnpcs:npchumanmale], [minecraft:shulker], [minecraft:mooshroom], [customnpcs:npcorcfmale], [minecraft:villager], [minecraft:ocelot], [customnpcs:npczombiefemale], [betternether:firefly], [minecraft:chicken], [customnpcs:npcvillager], [minecraft:wolf], [customnpcs:npcfurrymale], [minecraft:rabbit], [customnpcs:npcdragon]]
+    S:"More Entities" <
+        customnpcs:npcorcfemale
+        customnpcs:npcslime
+        customnpcs:npczombiemale
+        minecraft:parrot
+        customnpcs:npchumanfemale
+        minecraft:horse
+        minecraft:polar_bear
+        minecraft:bat
+        customnpcs:npcpony
+        minecraft:pig
+        minecraft:llama
+        forestry:butterflyge
+        customnpcs:npcnagamale
+        customnpcs:npcgolem
+        minecraft:sheep
+        minecraft:ender_dragon
+        customnpcs:npcenderman
+        biomesoplenty:wasp
+        customnpcs:npcdwarfmale
+        customnpcs:npcskeleton
+        minecraft:snowman
+        customnpcs:customnpcclassic
+        customnpcs:npcelfmale
+        customnpcs:customnpc64x32
+        minecraft:villager_golem
+        customnpcs:npcelffemale
+        minecraft:donkey
+        customnpcs:npcenderchibi
+        coroutil:bat_smart
+        minecraft:squid
+        minecraft:skeleton_horse
+        minecraft:mule
+        customnpcs:npccrystal
+        techguns:attackhelicopter
+        customnpcs:npcnagafemale
+        minecraft:zombie_horse
+        minecraft:cow
+        customnpcs:npcfurryfemale
+        customnpcs:customnpc
+        customnpcs:npcdwarffemale
+        customnpcs:customnpcalex
+        techguns:turret
+        customnpcs:npchumanmale
+        minecraft:shulker
+        minecraft:mooshroom
+        customnpcs:npcorcfmale
+        minecraft:villager
+        minecraft:ocelot
+        customnpcs:npczombiefemale
+        betternether:firefly
+        minecraft:chicken
+        customnpcs:npcvillager
+        minecraft:wolf
+        customnpcs:npcfurrymale
+        minecraft:rabbit
+        customnpcs:npcdragon
+     >
+
+    # Treat STEAL flags as whitelist [default: false]
+    B:"Steal Whitelist"=false
+
+    # Treat TARGETVILLAGER flags as whitelist [default: false]
+    B:"Villager Whitelist"=false
 }
 
 
