--- a/clients/IronSky/config/config/jei/worldSettings.cfg
+++ b/clients/IronSky/config/config/jei/worldSettings.cfg
@@ -18,6 +18,22 @@ world-1530706354 {
 }
 
 
+world-1750088799 {
+    # Показывать список закладок рядом с открытым интерфейсом.
+    B:bookmarkOverlayEnabled=true
+
+    # Брать предметы вместо отображения рецепта.
+    B:cheatItemsEnabled=false
+
+    # Скрывать и показывать предметы в списке нажатием клавиши по ним.
+    B:editEnabled=false
+    S:filterText=@
+
+    # Показывать список предметов рядом с открытым интерфейсом.
+    B:overlayEnabled=true
+}
+
+
 world-1887947997 {
     B:bookmarkOverlayEnabled=true
     B:cheatItemsEnabled=false
@@ -53,17 +69,10 @@ world1172866126 {
 
 
 world127644227 {
-    # Показывать список закладок рядом с открытым интерфейсом.
     B:bookmarkOverlayEnabled=true
-
-    # Брать предметы вместо отображения рецепта.
     B:cheatItemsEnabled=false
-
-    # Скрывать и показывать предметы в списке нажатием клавиши по ним.
     B:editEnabled=false
     S:filterText=
-
-    # Показывать список предметов рядом с открытым интерфейсом.
     B:overlayEnabled=true
 }
 
