--- a/clients/IronSky/config/config/waila/waila.cfg
+++ b/clients/IronSky/config/config/waila/waila.cfg
@@ -49,6 +49,8 @@ modules {
     B:general.showents=true
     B:general.showhp=true
     B:general.showstates=false
+    B:showMaterial=false
+    B:showOrigin=true
     B:vanilla.comparator=true
     B:vanilla.furnacedisplay=true
     B:vanilla.jukebox=true
@@ -74,6 +76,8 @@ server_forcing {
     B:general.showents=false
     B:general.showhp=false
     B:general.showstates=false
+    B:showMaterial=false
+    B:showOrigin=false
     B:vanilla.comparator=false
     B:vanilla.furnacedisplay=false
     B:vanilla.jukebox=false
