--- a/clients/IronSky/config/config/CustomNpcs.cfg
+++ b/clients/IronSky/config/config/CustomNpcs.cfg
@@ -60,3 +60,5 @@ FontType=Minecraft
 #Font size for custom fonts (doesn't work with minecrafts font)
 FontSize=18
 
+NpcSpeachTriggersChatEvent=false
+
