--- a/clients/IronSky/config/config/jei/jei.cfg
+++ b/clients/IronSky/config/config/jei/jei.cfg
@@ -26,6 +26,9 @@ advanced {
 
     # Как название мода должно быть отформатировано для подсказок JEI. Оставьте пустым, чтобы отключить. [По-умолчанию: blue italic] [Доступны: [black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray, dark_gray, blue, green, aqua, red, light_purple, yellow, white, obfuscated, bold, strikethrough, underline, italic]]
     S:modNameFormat=blue italic
+
+    # Enable JEI memory usage optimizations. [default: true]
+    B:optimizeMemoryUsage=true
 }
 
 
