--- a/servers/SilverValley/plugins/Essentials/config.yml
+++ b/servers/SilverValley/plugins/Essentials/config.yml
@@ -1194,7 +1194,7 @@ respawn-at-home-bed: true
 respawn-at-anchor: false
 
 # Teleport all joining players to the spawnpoint
-spawn-on-join: true
+spawn-on-join: false
 # The following value of `guests` states that all players in group `guests` will be teleported to spawn when joining.
 #spawn-on-join: guests
 # The following list value states that all players in group `guests` and `admin` are to be teleported to spawn when joining. 
