--- a/clients/SilverValley/extra/ultra-core-agent-client.conf
+++ b/clients/SilverValley/extra/ultra-core-agent-client.conf
@@ -10,3 +10,6 @@ f|https://auth.craftorio.com/profiles/minecraft/%s
 #Client skin (skin textures)
 r|https:\/\/textures\.minecraft\.net\/texture\/(.*)
 f|https://auth.craftorio.com/texture/%s
+#minecraftservices
+r|https:\/\/api\.minecraftservices\.com\/(.*)
+f|https://auth.craftorio.com/%s
