--- a/clients/SilverValley/extra/ultra-core-agent-client.conf
+++ b/clients/SilverValley/extra/ultra-core-agent-client.conf
@@ -1,5 +1,5 @@
 #Client auth
-p|https://sessionserver.mojang.com/session/minecraft/join
+p|https:\/\/sessionserver\.mojang\.com\/session\/minecraft\/join
 p|https://auth.craftorio.com/session/minecraft/join
 #Client profile (skins)
 r|https:\/\/sessionserver\.mojang\.com\/session\/minecraft\/profile\/([0-9a-f]+).*
@@ -12,4 +12,7 @@ r|https:\/\/textures\.minecraft\.net\/texture\/(.*)
 f|https://auth.craftorio.com/texture/%s
 #minecraftservices
 r|https:\/\/api\.minecraftservices\.com\/(.*)
+f|https://auth.craftorio.com/%s
+#authserver
+r|https:\/\/authserver\.mojang\.com\/(.*)
 f|https://auth.craftorio.com/%s
