--- a/clients/SilverValley/extra/ultra-core-agent-client.conf
+++ b/clients/SilverValley/extra/ultra-core-agent-client.conf
@@ -8,6 +8,9 @@ f|https://auth.craftorio.com/session/minecraft/profile/%s
 r|https:\/\/api\.mojang\.com\/profiles\/minecraft\/?(.*)?
 f|https://auth.craftorio.com/profiles/minecraft/%s
 #Client skin (skin textures)
+r|http:\/\/textures\.minecraft\.net\/texture\/(.*)
+f|https://auth.craftorio.com/texture/%s
+#Client skin (skin textures)
 r|https:\/\/textures\.minecraft\.net\/texture\/(.*)
 f|https://auth.craftorio.com/texture/%s
 #minecraftservices
