--- a/servers/SilverValley/config-server/server.properties
+++ b/servers/SilverValley/config-server/server.properties
@@ -25,7 +25,7 @@ max-build-height=256
 max-players=24
 max-tick-time=120000
 max-world-size=50000
-motd=Craftorio.com Server\!
+motd=SilverValley
 network-compression-threshold=256
 online-mode=true
 op-permission-level=4
