--- a/servers/Mc-1-18-2/config-server/server.properties
+++ b/servers/Mc-1-18-2/config-server/server.properties
@@ -25,9 +25,9 @@ max-build-height=256
 max-players=24
 max-tick-time=120000
 max-world-size=50000
-motd=Craftorio.com Server\!
+motd=Mc-1-18-2
 network-compression-threshold=256
-online-mode=true
+online-mode=false
 op-permission-level=4
 player-idle-timeout=1800
 prevent-proxy-connections=false
